Added nav and main title

--- a/index.html
+++ b/index.html
@@ -14,6 +14,23 @@
 </head>
 
 <body>
-  <h1>My Resume</h1>
+  <div class="container">
+    <header>
+        <nav>
+          <a href="#">About</a>
+          <a href="#">Contact</a>
+          <a href="#">Bio</a>
+        </nav>
+        
+        <h1>Justen McDonald</h1>
+    </header>
+    <section>
+      <div>
+        <h2></h2>
+        <p></p>
+      </div>
+    </section>
+
+  </div> <!-- end of container -->
 </body>
 </html>
