Added top middle section with work history

--- a/index.html
+++ b/index.html
@@ -17,20 +17,79 @@
   <div class="container">
     <header>
         <nav>
+          <a href="#">Home</a>
           <a href="#">About</a>
           <a href="#">Contact</a>
           <a href="#">Bio</a>
         </nav>
         
         <h1>Justen McDonald</h1>
+        <div>
+          <p class="profile">Profile</p>
+          <p>Being raised in a family of entrepreneurs I have been an employee or owner of a small business since I was in diapers. My on the job training started shortly after I could walk. There is a great deal of skills that I have picked up along the way like the value of hard work. Most importantly I learned that even though the customer may not be right they need to feel validated. I may not be able to solve their issue but the Eagle Scout in me sure likes to try. I enjoy an office environment but I am not afraid to get my hands dirty if the need arises. I have held every position from grunt to Owner and I appreciate the need for each position. 
+            </p>
+        </div>
     </header>
-    <section>
-      <div>
-        <h2></h2>
-        <p></p>
+    <section class="top-section">
+      <div class="work-history">
+        <h2>Work History</h2>
       </div>
-    </section>
+      <div class="top-content">
+        <h2>State of Utah</h2>
+        <h3>June 2018 - Current</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus tempora est at rerum minus excepturi, sapiente, necessitatibus iste explicabo suscipit tenetur aliquam esse eveniet iure? Sed expedita repudiandae aliquid doloremque!</p>
+      </div>
+      <div class="top-content">
+        <h2>Vivint Tech Support</h2>
+        <h3>Feb 2018 - May 2018 </h3>
+        <p>
+            I took a fast paced environment and was able to slow it down, to better listen and understand the customers concerns and needs.
+            I effectively managed multiple software solutions to gain assistance when I needed it and to provide a positive experience for the customers. Managed escalated customers and reframed expectations. 
 
+        </p>
+      </div>
+      <div class="top-content">
+        <h2>Stephen Wade</h2>
+        <h3>March 2017 - Jan 2018 </h3>
+        <p>
+          cultivated long lasting relationships with customers to personally close deals and provide insights into new and used products, features and options.
+          Greeted and actively listen to customers to uncover purchasing needs and make recommendations based on needs and wants.
+          Demonstrated vehicle functionality and explained options, accompanied prospective customers on demo drives, and explained costs associated with purchases. 
+
+        </p>
+      </div>
+      <div class="top-content">
+        <h2>Three Peaks Autoplex</h2>
+        <h3>April 2010 - Jan 2017</h3>
+        <p>As the managing member of a small business I am in charge of everything. I am the head of sales, service, maintenance, accounting, and just about everything else that goes on. As the owner of this business I have learned how to ensure the customer feels like they are heard, understood, and needs are taken care of. All the while educating my staff on how we can provide a better experience for the next customer.  
+          </p>
+      </div>  
+    </section> <!-- end of top section -->
+
+    <section class="middle-section">
+      <div class="left">
+          <div>
+            <h2>Skills</h2>
+          </div>
+          <div class="skills">
+            <ul>
+                <li>HTML and CSS </li>
+                <li>Self driven</li>
+                <li>Adaptable</li>
+                <li>Customer Service</li>
+                <li>Multitasking</li>
+                <li>Team oriented</li>
+                <li>Goal Oriented</li>
+                <li>More coming soon...</li>
+              </ul>
+          </div>
+      </div>  <!-- End of left -->
+
+      
+      <div class="right">
+
+      </div>  <!-- End of Right -->
+    </section> <!-- end of middle section -->
   </div> <!-- end of container -->
 </body>
 </html>
