Added lower section with skills and contact info

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </section> <!-- end of top section -->
 
     <section class="middle-section">
-      <div class="left">
+      <div class="left-side">
           <div>
             <h2>Skills</h2>
           </div>
@@ -86,8 +86,16 @@
       </div>  <!-- End of left -->
 
       
-      <div class="right">
-
+      <div class="right-side">
+        <div>
+          <h2>Contact</h2>
+        </div>
+        <div>
+          <p>Phone: 435-590-8479</p>
+          <p>Email: justenmcdonald@gmail.com</p>
+          <p>address: 310w 1500N Cedar City</p>
+          <p>GitHub: <a href="#">https://github.com/vospader13</a></p>
+        </div>
       </div>  <!-- End of Right -->
     </section> <!-- end of middle section -->
   </div> <!-- end of container -->
