Added mix in for content and for general boxes and used those to update for media queries

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <div>
           <h2>Contact</h2>
         </div>
-        <div>
+        <div class="contact-info">
           <p>Phone: 435-590-8479</p>
           <p>Email: justenmcdonald@gmail.com</p>
           <p>address: 310w 1500N Cedar City</p>
